--- a/attendance system.html
+++ b/attendance system.html
@@ -48,7 +48,7 @@
             <table class="table">
               <thead>
                 <tr>
-                  <th>ID</th>
+                  <th>Room No</th>
                   <th>Name</th>
                   <th>Depart</th>
                   <th>Date</th>
@@ -59,7 +59,7 @@
               </thead>
               <tbody>
                 <tr>
-                  <td>01</td>
+                  <td>501</td>
                   <td>Anurag Chauhan</td>
                   <td>CSIT</td>
                   <td>03-11-23</td>
@@ -67,8 +67,8 @@
                   <td><input type="checkbox"></td>
                   <td><button>View</button></td>
                 </tr>
-                <tr class="active">
-                  <td>02</td>
+                <tr>
+                  <td>509</td>
                   <td>Aditya Sharma</td>
                   <td>CSIT</td>
                   <td>03-11-23</td>
@@ -77,9 +77,79 @@
                   <td><button>View</button></td>
                 </tr>
                 <tr>
-                  <td>03</td>
-                  <td>Aditya Varshney</td>
+                  <td>501</td>
+                  <td>Aditya Vaswani</td>
                   <td>CSIT</td>
+                  <td>03-11-23</td>
+                  <td><input type="checkbox"></td>
+                  <td><input type="checkbox"></td>
+                  <td><button>View</button></td>
+                </tr>
+
+                <tr>
+                  <td>509</td>
+                  <td>Gaurav Daultani</td>
+                  <td>CSAI</td>
+                  <td>03-11-23</td>
+                  <td><input type="checkbox"></td>
+                  <td><input type="checkbox"></td>
+                  <td><button>View</button></td>
+                </tr>
+
+                <tr>
+                  <td>504</td>
+                  <td>Aayushker Singh</td>
+                  <td>CSAI</td>
+                  <td>03-11-23</td>
+                  <td><input type="checkbox"></td>
+                  <td><input type="checkbox"></td>
+                  <td><button>View</button></td>
+                </tr>
+
+                <tr>
+                  <td>509</td>
+                  <td>Yashwant Yadav</td>
+                  <td>CS</td>
+                  <td>03-11-23</td>
+                  <td><input type="checkbox"></td>
+                  <td><input type="checkbox"></td>
+                  <td><button>View</button></td>
+                </tr>
+
+                <tr>
+                  <td>502</td>
+                  <td>Aman Pathak</td>
+                  <td>ME</td>
+                  <td>03-11-23</td>
+                  <td><input type="checkbox"></td>
+                  <td><input type="checkbox"></td>
+                  <td><button>View</button></td>
+                </tr>
+
+                <tr>
+                  <td>510</td>
+                  <td>Harshit Jaiswal</td>
+                  <td>IT</td>
+                  <td>03-11-23</td>
+                  <td><input type="checkbox"></td>
+                  <td><input type="checkbox"></td>
+                  <td><button>View</button></td>
+                </tr>
+
+                <tr>
+                  <td>510</td>
+                  <td>Neelash jaiswal</td>
+                  <td>IT</td>
+                  <td>03-11-23</td>
+                  <td><input type="checkbox"></td>
+                  <td><input type="checkbox"></td>
+                  <td><button>View</button></td>
+                </tr>
+
+                <tr>
+                  <td>510</td>
+                  <td>Dhruv Saxena</td>
+                  <td>CS</td>
                   <td>03-11-23</td>
                   <td><input type="checkbox"></td>
                   <td><input type="checkbox"></td>
