--- a/login.html
+++ b/login.html
@@ -4,53 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
-    <center>
-        <font face="Arial Black" size="4"><u><b>LOGIN FORM</b></u></font>
-        <br><br>
-        <form name="f1" action="" method="post">
-            <table frame="box" cellspacing="10">
-                <tr>
-                    <td>Login</td>
-                    <td>
-                        <input type="email" placeholder="Enter email"  size="25"  id="email">
-                    </td>
-                </tr>
-                <tr>
-                    <td>Password</td>
-                    <td>
-                        <input type="password" placeholder="Enter password"   size="25"  id="password">
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan ="2" align="center">
-                    <input type="submit" value="SUBMIT"  onclick="func()" />
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <input type="reset" value="RESET"></td>
-                </tr>
-            </table>
+    <div class="login-container">
+        <h2>Login</h2>
+        <form id="loginForm" onsubmit="return loginUser()">
+            <label for="username">Username:</label>
+            <input type="text" id="username" required>
 
-            <script>
-                function func(){
-                    var email = document.getElementById('email').value;
-                    var pass = document.getElementById('password').value;
-                    if(email=='Tiwari@gmail.com' && pass== 123456){
-                        alert("success full ! ");
-                        window.location.assign('attendance system.html');
-                    }
-                    else{
-                        alert("Wrong entry ");
-                    }
-                }
-        
-            </script>
+            <label for="password">Password:</label>
+            <input type="password" id="password" required>
 
-
-           
+            <button type="submit">Login</button>
         </form>
-    </center>
 
-   
+        <p>Don't have an account? <a href="signup.html">Sign up</a></p>
+    </div>
+
+    <script src="login.js"></script>
 </body>
 </html>
