--- a/login.html
+++ b/login.html
@@ -11,10 +11,10 @@
         <h2>Login</h2>
         <form id="loginForm" onsubmit="return loginUser()">
             <label for="username">Username:</label>
-            <input type="text" id="username" required>
+            <input type="text"  placeholder="Enter username"   id="username" required>
 
             <label for="password">Password:</label>
-            <input type="password" id="password" required>
+            <input type="password"  placeholder="Enter password"  id="password" required>
 
             <button type="submit">Login</button>
         </form>
