--- a/attendance system.html
+++ b/attendance system.html
@@ -44,7 +44,7 @@
   
         <section class="attendance">
           <div class="attendance-list">
-            <h1>Attendance List</h1>
+            <h1>CV Raman Hostel</h1>
             <table class="table">
               <thead>
                 <tr>
