--- a/attendance system.html
+++ b/attendance system.html
@@ -50,7 +50,7 @@
                 <tr>
                   <th>Room No</th>
                   <th>Name</th>
-                  <th>Depart</th>
+                  <th>Floor</th>
                   <th>Date</th>
                   <th>Present</th>
                   <th>Absent</th>
@@ -61,7 +61,7 @@
                 <tr>
                   <td>501</td>
                   <td>Anurag Chauhan</td>
-                  <td>CSIT</td>
+                  <td>4th</td>
                   <td>03-11-23</td>
                   <td><input type="checkbox"></td>
                   <td><input type="checkbox"></td>
@@ -70,7 +70,7 @@
                 <tr>
                   <td>509</td>
                   <td>Aditya Sharma</td>
-                  <td>CSIT</td>
+                  <td>4th</td>
                   <td>03-11-23</td>
                   <td><input type="checkbox"></td>
                   <td><input type="checkbox"></td>
@@ -79,7 +79,7 @@
                 <tr>
                   <td>501</td>
                   <td>Aditya Vaswani</td>
-                  <td>CSIT</td>
+                  <td>4th</td>
                   <td>03-11-23</td>
                   <td><input type="checkbox"></td>
                   <td><input type="checkbox"></td>
@@ -89,7 +89,7 @@
                 <tr>
                   <td>509</td>
                   <td>Gaurav Daultani</td>
-                  <td>CSAI</td>
+                  <td>4th</td>
                   <td>03-11-23</td>
                   <td><input type="checkbox"></td>
                   <td><input type="checkbox"></td>
@@ -99,7 +99,7 @@
                 <tr>
                   <td>504</td>
                   <td>Aayushker Singh</td>
-                  <td>CSAI</td>
+                  <td>4th</td>
                   <td>03-11-23</td>
                   <td><input type="checkbox"></td>
                   <td><input type="checkbox"></td>
@@ -109,7 +109,7 @@
                 <tr>
                   <td>509</td>
                   <td>Yashwant Yadav</td>
-                  <td>CS</td>
+                  <td>4th</td>
                   <td>03-11-23</td>
                   <td><input type="checkbox"></td>
                   <td><input type="checkbox"></td>
@@ -119,7 +119,7 @@
                 <tr>
                   <td>502</td>
                   <td>Aman Pathak</td>
-                  <td>ME</td>
+                  <td>4th</td>
                   <td>03-11-23</td>
                   <td><input type="checkbox"></td>
                   <td><input type="checkbox"></td>
@@ -129,7 +129,7 @@
                 <tr>
                   <td>510</td>
                   <td>Harshit Jaiswal</td>
-                  <td>IT</td>
+                  <td>4th</td>
                   <td>03-11-23</td>
                   <td><input type="checkbox"></td>
                   <td><input type="checkbox"></td>
@@ -139,7 +139,7 @@
                 <tr>
                   <td>510</td>
                   <td>Neelash jaiswal</td>
-                  <td>IT</td>
+                  <td>4th</td>
                   <td>03-11-23</td>
                   <td><input type="checkbox"></td>
                   <td><input type="checkbox"></td>
@@ -149,7 +149,7 @@
                 <tr>
                   <td>510</td>
                   <td>Dhruv Saxena</td>
-                  <td>CS</td>
+                  <td>4th</td>
                   <td>03-11-23</td>
                   <td><input type="checkbox"></td>
                   <td><input type="checkbox"></td>
