--- a/attendance system.html
+++ b/attendance system.html
@@ -21,7 +21,7 @@
           </a></li>
           <li><a href="#">
             <i class="fas fa-comment"></i>
-            <span class="nav-item">Message</span>
+            <span class="nav-item">Change Hostel</span>
           </a></li>
           
           <li><a href="#">
