--- a/attendance system.html
+++ b/attendance system.html
@@ -155,6 +155,16 @@
                   <td><input type="checkbox"></td>
                   <td><button>View</button></td>
                 </tr>
+
+                <tr>
+                  <td>110</td>
+                  <td>Agnik Saha</td>
+                  <td>5th</td>
+                  <td>03-11-23</td>
+                  <td><input type="checkbox"></td>
+                  <td><input type="checkbox"></td>
+                  <td><button>View</button></td>
+                </tr>
                 
               </tbody>
             </table>
