--- a/login.html
+++ b/login.html
@@ -7,7 +7,17 @@
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
+
+    <div class="image-container">
+        <img src="KIET logo.png">
+    </div>
+
+
+
     <div class="login-container">
+
+        
+
         <h2>Login</h2>
         <form id="loginForm" onsubmit="return loginUser()">
             <label for="username">Username:</label>
