--- a/1.html
+++ b/1.html
@@ -36,7 +36,9 @@
                     alert('Some rooms are left Please take attendance of room no ' + invalidRows.join(', '));
                 }
 
-                var presentRows = $('.table tbody tr td:nth-child(6) input:checked').parent().parent();
+
+                  // Get the rows with "Present" and "Absent" checkboxes checked
+            var presentRows = $('.table tbody tr td:nth-child(6) input:checked').parent().parent();
             var absentRows = $('.table tbody tr td:nth-child(7) input:checked').parent().parent();
 
             // Create separate tables for "Present" and "Absent"
@@ -74,6 +76,7 @@
           }
         }
       }
+      
     </script>
 
 </head>
