--- a/attendance system.html
+++ b/attendance system.html
@@ -52,7 +52,7 @@
         
 
 
-          <li><a href="#" class="logo">
+          <li><a href="http://127.0.0.1:5500/Attendance.html" class="logo">
             <img src="attendance logo.png">
             <span class="nav-item">Attendance</span>
           </a></li>
