--- a/Gargi.html
+++ b/Gargi.html
@@ -101,16 +101,16 @@
                 <td>101</td>
                 <td>Akshama Chauhan</td>
                 <td>2nd</td>
-                <td>03-11-23</td>
+                <td>24-01-24</td>
                 <td><input type="checkbox"></td>
                 <td><input type="checkbox"></td>
                 <td><button>View</button></td>
               </tr>
               <tr>
                 <td>102</td>
-                <td>Arpita Maurya</td>
+                <td>Nidhi singh</td>
                 <td>2nd</td>
-                <td>03-11-23</td>
+                <td>24-01-24</td>
                 <td><input type="checkbox"></td>
                 <td><input type="checkbox"></td>
                 <td><button>View</button></td>
@@ -119,7 +119,7 @@
                 <td>103</td>
                 <td>Anvita Khator</td>
                 <td>2nd</td>
-                <td>03-11-23</td>
+                <td>24-01-24</td>
                 <td><input type="checkbox"></td>
                 <td><input type="checkbox"></td>
                 <td><button>View</button></td>
@@ -129,7 +129,7 @@
                 <td>104</td>
                 <td>Sejal Gupta</td>
                 <td>2nd</td>
-                <td>03-11-23</td>
+                <td>24-01-24</td>
                 <td><input type="checkbox"></td>
                 <td><input type="checkbox"></td>
                 <td><button>View</button></td>
@@ -139,7 +139,7 @@
                 <td>105</td>
                 <td>Aditi Sharma</td>
                 <td>2nd</td>
-                <td>03-11-23</td>
+                <td>24-01-24</td>
                 <td><input type="checkbox"></td>
                 <td><input type="checkbox"></td>
                 <td><button>View</button></td>
@@ -149,7 +149,7 @@
                 <td>201</td>
                 <td>Anushka Sharma</td>
                 <td>3rd</td>
-                <td>03-11-23</td>
+                <td>24-01-24</td>
                 <td><input type="checkbox"></td>
                 <td><input type="checkbox"></td>
                 <td><button>View</button></td>
@@ -159,7 +159,7 @@
                 <td>202</td>
                 <td>Alia Bhatt</td>
                 <td>3rd</td>
-                <td>03-11-23</td>
+                <td>24-01-24</td>
                 <td><input type="checkbox"></td>
                 <td><input type="checkbox"></td>
                 <td><button>View</button></td>
@@ -169,7 +169,7 @@
                 <td>203</td>
                 <td>Sapna Chaudhary</td>
                 <td>3rd</td>
-                <td>03-11-23</td>
+                <td>24-01-24</td>
                 <td><input type="checkbox"></td>
                 <td><input type="checkbox"></td>
                 <td><button>View</button></td>
@@ -179,7 +179,7 @@
                 <td>204</td>
                 <td>Priyanka Chopra</td>
                 <td>3rd</td>
-                <td>03-11-23</td>
+                <td>24-01-24</td>
                 <td><input type="checkbox"></td>
                 <td><input type="checkbox"></td>
                 <td><button>View</button></td>
@@ -189,7 +189,7 @@
                 <td>205</td>
                 <td>Deepika Padukone</td>
                 <td>3rd</td>
-                <td>03-11-23</td>
+                <td>24-01-24</td>
                 <td><input type="checkbox"></td>
                 <td><input type="checkbox"></td>
                 <td><button>View</button></td>
@@ -199,7 +199,7 @@
                 <td>206</td>
                 <td>Taapsee Pannu</td>
                 <td>3rd</td>
-                <td>03-11-23</td>
+                <td>24-01-24</td>
                 <td><input type="checkbox"></td>
                 <td><input type="checkbox"></td>
                 <td><button>View</button></td>
